--- a/lab4/flaskr/templates/about.html
+++ b/lab4/flaskr/templates/about.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+<h1> {% block title} About {% endblock %} </h1>
 <!-- about start -->
 <script>
  $( document ).ready( function() {
