--- a/lab4/flaskr/templates/about.html
+++ b/lab4/flaskr/templates/about.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
-<h1> {% block title} About {% endblock %} </h1>
+{% block body %}
 <!-- about start -->
+<h1> {% block title} About {% endblock %} </h1>
+About this app...
 <script>
  $( document ).ready( function() {
      console.log("about.html ready function running.")
@@ -8,3 +10,4 @@
 </script>
 
 <!-- about end -->
+{% endblock %}
