--- a/lab4/flaskr/templates/about.html
+++ b/lab4/flaskr/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
-{% block body %}
+{% block content %}
 <!-- about start -->
-<h1> {% block title} About {% endblock %} </h1>
+<h1> {% block title %} About {% endblock %} </h1>
 About this app...
 <script>
  $( document ).ready( function() {
