--- a/lab4/flaskr/templates/base.html
+++ b/lab4/flaskr/templates/base.html
@@ -29,10 +29,10 @@
         <a href="." class="pure-menu-heading pure-menu-link">CSCI E-11 Lab #4</a>
         <ul class="pure-menu-list">
           <li class="pure-menu-item">
-            <a href="index.html" class="pure-menu-link">Home</a>
+            <a href="." class="pure-menu-link">Home</a>
           </li>
           <li class="pure-menu-item">
-            <a href="about.html" class="pure-menu-link" >About</a>
+            <a href="about" class="pure-menu-link" >About</a>
           </li>
         </ul>
       </div>
