--- a/lab4/flaskr/templates/index.html
+++ b/lab4/flaskr/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
-{% block body %}
+{% block content %}
 <!-- index start -->
-<h1>Are you a celebrity?</h1>
+<h1> {% block title %} Are you a celebrity? {% endblock %} </h1>
 
 <div id='upload-form'>
   <h2>Upload an image</h2>
@@ -24,7 +24,7 @@
       </div>
       <div class='pure-control-group'>
         <label for='image-file'>Select image to upload:</label>
-        <input id='image-file' type="file" />
+        <input id='image-file' type="file" class='uploadf' size='50'/>
         <span class="pure-form-message-inline">required</span>
       </div>
       <div class='pure-control-group'>
@@ -42,4 +42,5 @@
 </div>
 
 <!-- index end -->
+<script src="static/lab4.js"> </script>
 {% endblock %}
