--- a/lab4/flaskr/templates/index.html
+++ b/lab4/flaskr/templates/index.html
@@ -29,7 +29,7 @@
       </div>
       <div class='pure-control-group'>
         <label for='submit-button'>Click to upload:</label>
-        <input id='upload-button' type='button' value='upload' onclick='upload_image()' class='uploadf' />
+        <input id='upload-button' type='button' value='upload' class='uploadf' />
       </div>
     </fieldset>
   </form>
