--- a/lab4/flaskr/templates/index.html
+++ b/lab4/flaskr/templates/index.html
@@ -38,7 +38,8 @@
 
 <!-- Show the uploaded images here -->
 <div id='upload-preview'>
-    <p>Here are the uploaded images. Are any celebrities? </p>
+    <p>Here are the uploaded images so far. Are any celebrities? </p>
+    <div id='table-container'></div>
 </div>
 
 <!-- index end -->
