--- a/lab4/flaskr/templates/base.html
+++ b/lab4/flaskr/templates/base.html
@@ -25,11 +25,9 @@
        -- Read more at srihash.org
        -->
 
-    <!-- Use DataTables to display the table.
-      -- Two other good options would be Tabulator and Handsontable.
-      -->
-    <link rel="stylesheet" href="https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css">
-    <script src="https://cdn.datatables.net/2.1.8/js/dataTables.min.js"></script>
+    <!-- Tabulator -->
+    <link href="https://unpkg.com/tabulator-tables@6.3.0/dist/css/tabulator.min.css" rel="stylesheet">
+    <script type="text/javascript" src="https://unpkg.com/tabulator-tables@6.3.0/dist/js/tabulator.min.js"></script>
 
     <!-- Specific styles for this application. Note the use of url_for() -->
     <link rel="stylesheet" href="{{ url_for('static', filename='lab4_style.css') }}">
