--- a/lab4/flaskr/templates/index.html
+++ b/lab4/flaskr/templates/index.html
@@ -2,6 +2,14 @@
 
 {% block content %}
 <!-- index start -->
+<!-- container for the pop-up -->
+<div id="image-popup"
+     style="display:none; position:fixed; top:0; left:0; width:100%; height:100%;
+         background:rgba(0,0,0,0.8); justify-content:center; align-items:center; z-index:1000;">
+    <img id="popup-img" src="" alt="Full-Size Image" style="max-width:90%; max-height:90%; border:5px solid white;">
+</div>
+
+<!-- body -->
 <h1> {% block title %} Are you a celebrity? {% endblock %} </h1>
 
 <div id='upload-form'>
