--- a/staff/leaderboard/src/templates/leaderboard.html
+++ b/staff/leaderboard/src/templates/leaderboard.html
@@ -39,7 +39,7 @@
 
 
                     var currentdate = new Date();
-                    const zeroPad = (num, places) => String(num).padStart(places, '0')
+                    const zeroPad = (num, places) => String(num).padStart(places, '0');
                     var datetime = "Last Sync: " +
                                  + currentdate.getFullYear() + "-" +
                                  + zeroPad(currentdate.getMonth()+1,2)  + "-"
