--- a/lab4/flaskr/templates/base.html
+++ b/lab4/flaskr/templates/base.html
@@ -30,7 +30,7 @@
     <script type="text/javascript" src="https://unpkg.com/tabulator-tables@6.3.0/dist/js/tabulator.min.js"></script>
 
     <!-- Specific styles for this application. Note the use of url_for() -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='lab4_style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   </head>
 
   <body lang='en-US' style='background:white'>
