--- a/lab5/app/templates/index.html
+++ b/lab5/app/templates/index.html
@@ -1,61 +1,1 @@
-{% extends "base.html" %}
-
-{% block content %}
-<!-- index start -->
-<!-- container for the pop-up -->
-<div id="image-popup"
-     style="display:none; position:fixed; top:0; left:0; width:100%; height:100%;
-         background:rgba(0,0,0,0.8); justify-content:center; align-items:center; z-index:1000;">
-    <img id="popup-img" src="" alt="Full-Size Image" style="max-width:90%; max-height:90%; border:5px solid white;">
-</div>
-
-<!-- body -->
-<h1> {% block title %} Are you a celebrity? {% endblock %} </h1>
-
-<div id='upload-form'>
-  <h2>Upload an image</h2>
-
-  <p>Select your image and click the upload button.</p>
-
-  <form class='pure-form pure-form-aligned'>
-    <fieldset>
-      <div class='pure-control-group'>
-        <label for='api-key'>API Key:</label>
-        <input type='text' id='api-key' name='api-secret-key' class='uploadf' />
-        <span class="pure-form-message-inline">required</span>
-      </div>
-
-      <div class='pure-control-group'>
-        <label for='api-secret-key'>API Secret Key:</label>
-        <input type='text' id='api-secret-key' name='api-secret-key' class='uploadf'/>
-        <span class="pure-form-message-inline">required</span>
-      </div>
-      <div class='pure-control-group'>
-        <label for='image-file'>Select image to upload:</label>
-        <input id='image-file' type="file" class='uploadf' size='50'/>
-        <span class="pure-form-message-inline">required</span>
-      </div>
-      <div class='pure-control-group'>
-        <label for='submit-button'>Click to upload:</label>
-        <input id='upload-button' type='button' value='upload' class='uploadf' />
-      </div>
-    </fieldset>
-  </form>
-  <div id='message'></div>
-</div>
-
-<!-- Show the uploaded images here -->
-<div id='upload-preview'>
-    <p>Here are the uploaded images so far. Are any celebrities? </p>
-    <div id='table-container'></div>
-</div>
-
-<!-- index end -->
-<!-- always bring in the chat server -->
-
-
-<!-- If we are in lab5, bring in the image interaction -->
-{% if lab5 %}
-<script src="static/image_interaction.js"> </script>
-{% endif %}
-{% endblock %}
+../../../lab4/app/templates/index.html
