nearly have lab5 working

--- a/lab4/app/templates/base.html
+++ b/lab4/app/templates/base.html
@@ -36,7 +36,7 @@
   <body lang='en-US' style='background:white'>
     <header>
       <div class="pure-menu pure-menu-horizontal">
-        <a href="." class="pure-menu-heading pure-menu-link">CSCI E-11 Lab #4</a>
+        <a href="." class="pure-menu-heading pure-menu-link">CSCI E-11 Lab #{{lab_number}}</a>
         <ul class="pure-menu-list">
           <li class="pure-menu-item">
             <a href="about" class="pure-menu-link" >About</a>
