--- a/lab4/app/templates/index.html
+++ b/lab4/app/templates/index.html
@@ -47,8 +47,9 @@
     </fieldset>
   </form>
   <iframe name="hidden-iframe" style="display: none;"></iframe>
-  <div id='message'></div>
+  <div id='status-message'></div>
 </div>
+
 
 <!-- If we are in lab5, bring in the image interaction -->
 {% if lab_number == "5" %}
