--- a/staff/leaderboard/leaderboard_app/templates/client_error.html
+++ b/staff/leaderboard/leaderboard_app/templates/client_error.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Leaderboard Client Error</title>
 </head>
 <body>
