--- a/lab7/app/static/style.css
+++ b/lab7/app/static/style.css
@@ -1,1 +1,12 @@
-../../../lab5/app/static/style.css
+html {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+a.disabled {
+    pointer-events: none;
+    cursor: default;
+}
+
+#image-popup {
+    cursor: pointer;
+}
