--- a/lab7/app/templates/about.html
+++ b/lab7/app/templates/about.html
@@ -1,1 +1,13 @@
-../../../lab5/app/templates/about.html
+{% extends "base.html" %}
+{% block content %}
+<!-- about start -->
+<h1> {% block title %} About {% endblock %} </h1>
+About this app...
+<script>
+ $( document ).ready( function() {
+     console.log("about.html ready function running.")
+ });
+</script>
+
+<!-- about end -->
+{% endblock %}
