update lab5 to lab7

--- a/lab7/app/templates/base.html
+++ b/lab7/app/templates/base.html
@@ -41,6 +41,9 @@
           <li class="pure-menu-item">
             <a href="about" class="pure-menu-link" >About</a>
           </li>
+          <li class="pure-menu-item">
+            <a href="camera" class="pure-menu-link" >Camera</a>
+          </li>
         </ul>
       </div>
     </header>
