--- a/etc/e11-cli/lambda-home/templates/index.html
+++ b/etc/e11-cli/lambda-home/templates/index.html
@@ -5,6 +5,7 @@
   <body>
     <p>This is the home page.</p>
     <p>{{status}}</p>
-    <p>Welcome to CSCI E-11. You can log in with your <a href='{{key}}'>[HARVARD KEY]</a>.</p>
+    <p>Welcome to CSCI E-11. You can log in with your <a href='{{harvard_key}}'>[HARVARD KEY]</a>.</p>
+    {{extra}}
   </body>
 </html>
