sessions written to home-user-sessions table

--- a/etc/e11-cli/lambda-home/src/home_app/templates/dashboard.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/dashboard.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <p> name: {{user.name}} </p>
-    <p> hostname: {{user.hostname}.csci-e-11.org </p>
+    <p> hostname: {{user.hostname}}.csci-e-11.org </p>
     <p>
     <p>This is the dashboard.</p>
     <p>You can <a href='/logout'>logout</a></p>
