added Cursor-generated test

--- a/etc/e11-cli/lambda-home/src/home_app/templates/logout.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/logout.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block body}
+{% block body %}
 <h2> Logged Out</h2>
 <p>You have been logged out.</p>
 <p>You can close this window, or log in with your <a href='{{harvard_key}}'>[HARVARD KEY]</a>.</p>
