--- a/etc/e11-cli/lambda-home/src/home_app/templates/404.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/404.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block body}
+{% block body %}
 <h1>404 Not Found</h1>
 <p>{{page}}: This page could not be found</p>
 {% endblock %}
