--- a/etc/e11-cli/lambda-home/src/home_app/templates/base.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" href="https://planttracer.com/favicon.png" type="image/png"/>
+    <link rel="icon" href="/favicon.png" type="image/png"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="google"   content="notranslate"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -12,6 +12,7 @@
           href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css"
           integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/grids-responsive-min.css" />
+    <link rel="stylesheet" href="static/infobox.css" />
     <style>
       html {
       margin-left: 20px;
