dashboard shows this session

--- a/etc/e11-cli/lambda-home/src/home_app/templates/dashboard.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/dashboard.html
@@ -12,7 +12,12 @@
   </tbody>
 </table>
 <h3>User Log</h3>
-<h3>Active Sessions</h3>
+<h3>Authenticated Sessions</h3>
+<h4>This session</h4>
+<pre>
+{{ses_dump}}
+</pre>
+<h4>Active Sessions Table</h4>
 
 <table class='pure-table'>
   <thead>
