added logs to dashboard

--- a/etc/e11-cli/lambda-home/src/home_app/templates/dashboard.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/dashboard.html
@@ -9,9 +9,27 @@
     <tr><th>Name</th><td>{{user.name}}</td></tr>
     <tr><th>Email</th><td>{{user.email}}</td></tr>
     <tr><th>course_key</th><td>{{user.course_key}}</td></tr>
+    <th><th>Web browser IP address:</th><td>{{client_ip}}</td></tr>
   </tbody>
 </table>
 <h3>User Log</h3>
+<table class='pure-table'>
+  <thead>
+    <tr><th>sk</th><th>client_ip</th><th>message</th><th>claims</th></tr>
+  </thead>
+  <tbody>
+    {% for log in logs %}
+    <tr>
+      <th>{{log.sk}}</th>
+      <td>{{log.client_ip}</td>
+      <td>{{log.message}}</td>
+      <td>{{log.claims}}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+
+
 <h3>Authenticated Sessions</h3>
 <h4>This session</h4>
 <pre>
