--- a/etc/e11-cli/lambda-home/src/home_app/templates/login.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/login.html
@@ -1,13 +1,7 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% block body %}
 <h1>Welcome to CSCI E-11</h1>
-<p>{{status}}</p>
-<p>You can log in with your <a href='{{harvard_key}}'>[HARVARD KEY]</a>.</p>
-    {{extra}}
-  </body>
-</html>
-<h2> Logged Out</h2>
-<p>You have been logged out.</p>
-<p>You can close this window, or log in with your <a href='{{harvard_key}}'>[HARVARD KEY]</a>.</p>
-{{extra}}
-{% endblock %}
+<p>{{ status }}</p>
+<p>You can log in with your <a href="{{ harvard_key }}">[HARVARD KEY]</a>.</p>
+{{ extra }}
+{% endblock body %}
