info box and rapid api iteration test

--- a/etc/e11-cli/lambda-home/src/home_app/templates/base.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/base.html
@@ -13,8 +13,8 @@
           href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css"
           integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/grids-responsive-min.css" />
-    <link rel="stylesheet" href="static/site.css" />
-    <link rel="stylesheet" href="static/infobox.css" />
+    <link rel="stylesheet" href="/static/site.css" />
+    <link rel="stylesheet" href="/static/infobox.css" />
     {% block head %}{% endblock head %}
     {% block script %}{% endblock script %}
   </head>
@@ -36,6 +36,9 @@
           </li>
           <li class="pure-menu-item">
             <a href="page?q=help" class="pure-menu-link">Help</a>
+          </li>
+          <li class="pure-menu-item">
+            <a href="https://github.com/Harvard-csci-e-11/spring26" class="pure-menu-link">Github</a>
           </li>
         </ul>
       </div>
