--- a/etc/e11-cli/lambda-home/src/home_app/templates/dashboard.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/dashboard.html
@@ -30,13 +30,16 @@
 </table>
 
 <h3>Authenticated Sessions</h3>
-<h4>This session</h4>
-<pre>
+  <div class="infobox infobox-floating">
+    <div class="infobox-title">This session</div>
+    This is the DynamDB record associated with this browser session:
+    <pre>
 {{ ses_dump }}
-</pre>
-<h4>Active Sessions Table</h4>
+    </pre>
+  </div>
+  <h4>Active Sessions Table</h4>
 
-<table class="pure-table">
+  <table class="pure-table">
   <thead>
     <tr><th>Session #</th><th>IP Address</th><th>Created</th><th>Expires</th></tr>
   </thead>
