initial security plan

--- a/etc/e11-cli/lambda-home/src/home_app/static/site.css
+++ b/etc/e11-cli/lambda-home/src/home_app/static/site.css
@@ -7,3 +7,12 @@ body {
 .current-session {
     background-color: #ffeeff;
 }
+
+.delete-btn {
+  cursor: pointer;
+}
+
+.delete-btn.failed {
+  color: red;
+  font-weight: bold;
+}
