user and session model cleaned up more

--- a/etc/e11-cli/lambda-home/src/home_app/templates/base.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/base.html
@@ -45,8 +45,8 @@
     </header>
 
     <div class="content">
-    {% block body %}
-    {% endblock body %}
+    {% block content %}
+    {% endblock content %}
     </div>
 
     <div class="footer">
