--- a/etc/e11-cli/lambda-home/src/home_app/templates/terms.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/terms.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block body %}
+{% block content %}
 <h1>Terms</h1>
 <p>This site was created by Simson Garfinkel for use in Harvard CSCI E-11.</p>
 
@@ -13,4 +13,4 @@
     Harvard Canvas Privacy Policy </a></li>
 </ul>
 
-{% endblock body %}
+{% endblock content %}
