--- a/etc/e11-cli/lambda-home/src/home_app/templates/dashboard.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/dashboard.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block body %}
+{% block content %}
 <h2> Dashboard </h2>
 <h3>User Info</h3>
 <table class="pure-table">
@@ -94,4 +94,4 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 
 
-{% endblock body %}
+{% endblock content %}
