--- a/etc/e11-cli/lambda-home/src/home_app/templates/login.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
-{% block body %}
+{% block content %}
 <h1>Welcome to CSCI E-11</h1>
 <p>{{ status }}</p>
 <p>You can log in with your <a href="{{ harvard_key }}">[HARVARD KEY]</a>.</p>
 {{ extra }}
-{% endblock body %}
+{% endblock content %}
