access check works; favicon.png works

--- a/etc/e11-cli/lambda-home/src/home_app/templates/base.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="google"   content="notranslate"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>{% block title %}{{ title }}{% endblock title %}</title>
-    <link rel="icon" href="/favicon.png" type="image/png"/>
+    <link rel="icon" href="/static/favicon.png" type="image/png"/>
     <!-- use Pure.css - https://purecss.io/ -->
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css"
