--- a/etc/e11-cli/lambda-home/src/home_app/templates/privacy.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/privacy.html
@@ -3,7 +3,7 @@
 <h1>Privacy Policy</h1>
 <p>This site was created by Simson Garfinkel for use in Harvard CSCI E-11.</p>
 <p>When used in conjunction with a course at Harvard University, this website is covered by the
-  <a href="https://www.huit.harvard.edu/canvas-privacy">Harvard Canvas Privacy Policy</a></li>
+  <a href="https://www.huit.harvard.edu/canvas-privacy">Harvard Canvas Privacy Policy</a>
 </p>
 
 <p>Otherwise, this site is covered by the <a href='https://demo.planttracer.com/privacy'>Plant Tracer Privacy Policy</a>.</p>
