--- a/etc/e11-cli/lambda-home/src/home_app/templates/help.html
+++ b/etc/e11-cli/lambda-home/src/home_app/templates/help.html
@@ -2,6 +2,6 @@
 {% block content %}
 <h1>Help</h1>
 
-<p>Please refer to our git repo at <a href='https://github.com/Harvard-CSCI-E-11/spring26/'>https://github.com/Harvard-CSCI-E-11/spring26/</a></p>.
+<p>Please refer to our git repo at <a href='https://github.com/Harvard-CSCI-E-11/spring26/'>https://github.com/Harvard-CSCI-E-11/spring26/</a>.</p>
 
 {% endblock content %}
