--- a/lab6/server/templates/index.html
+++ b/lab6/server/templates/index.html
@@ -54,8 +54,8 @@
 </div>
 
 
-<!-- If we are in lab5 or lab7, bring in the image interaction -->
-{% if lab_number == "5" or lab_number == "7"%}
+<!-- If we are in lab5, lab6 or lab8, bring in the image interaction -->
+{% if lab_number == "5" or lab_number == "7" or lab_number == "8" %}
 <div id='lab5'></div>
 <script src="static/imageboard.js"></script>
 {% endif %}
