--- a/lab4/server/templates/base.html
+++ b/lab4/server/templates/base.html
@@ -41,6 +41,11 @@
           <li class="pure-menu-item">
             <a href="about" class="pure-menu-link" >About</a>
           </li>
+          {% if lab_number == "8" %}
+          <li class="pure-menu-item">
+            <a href="camera" class="pure-menu-link" >Camera</a>
+          </li>
+          {% endif %}
         </ul>
       </div>
     </header>
