--- a/lab4/server/templates/index.html
+++ b/lab4/server/templates/index.html
@@ -55,9 +55,9 @@
 
 
 <!-- If we are in lab5, lab6 or lab8, bring in the image interaction -->
-{% if lab_number == "5" or lab_number == "7" or lab_number == "8" %}
+{% if lab_number >= "5" %}
 <div id='lab5'></div>
-<script src="static/imageboard.js"></script>
+<script src="static/lab5_imageboard.js"></script>
 {% endif %}
 
 
